fixed annoying text overlap

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -29,11 +29,11 @@
   /*margin-top: 30px;*/  /*Add a top margin to avoid content overlay */
 
 
-/*  @media screen and (min-width: 920px) {
+  @media screen and (min-width: 920px) {
     max-width: calc(920px - (30px * 2));
     padding-right: 30px;
     padding-left: 30px;
- }*/
+ }
 
 }
 
